# telegram-soccer-bot-gabo

./: .env.example  README.md  main.py  pyproject.toml
src/: constants.py  core_logic.py  soccer_http_client.py
